--- a/src/app/features/reserved-area/producer/coupon-create/coupon-create.component.html
+++ b/src/app/features/reserved-area/producer/coupon-create/coupon-create.component.html
@@ -47,9 +47,9 @@
               <label class="col-12 col-3 col-lg-3 col-sm-3 col-form-label">Prezzo</label>
               <div class="col-8 col-5 col-lg-7 col-sm-7">
                 <input type="number" formControlName="price" class="form-control"
-                       [ngClass]="{ 'is-invalid': submitted && f.price.errors }" min="0" />
+                       [ngClass]="{ 'is-invalid': submitted && f.price.errors }" min="1" />
                 <div *ngIf="submitted && f.price.errors" class="invalid-feedback">
-                  <div *ngIf="f.price.errors">Prezzo obbligatorio.</div>
+                  <div *ngIf="f.price.errors">Inserire prezzo, minimo 1.</div>
                 </div>
               </div>
               <div class="col-4 col-sm-2 col-lg-2 my-auto">
