--- a/src/app/features/reserved-area/consumer/coupon-bought/coupon-bought.component.html
+++ b/src/app/features/reserved-area/consumer/coupon-bought/coupon-bought.component.html
@@ -28,7 +28,7 @@
               <div *ngIf="coupon.type === ITEM_TYPE.PACKAGE" class="coupon-package text-uppercase">
                 <i class="fas fa-box-open mr-1"></i>
               </div>
-              <img class="img-thumbnail" [src]="imageUrl(coupon.image)" style="max-width: 150px;" alt="Card image cap">
+              <img class="img-thumbnail" [src]="imageUrl(coupon.image)" style="max-width: 150px; max-height: 150px" alt="Card image cap">
             </td>
             <td>{{formatPrice(coupon.price)}}</td>
             <td>{{formatDate(coupon.purchase_time)}}</td>
