--- a/src/app/core/sidebar/sidebar.component.html
+++ b/src/app/core/sidebar/sidebar.component.html
@@ -6,7 +6,10 @@
     <ul class="list-group sticky-top sticky-offset">
       <li style="background-color: white"
           class="list-group-item sidebar-separator-title d-flex align-items-center menu-collapsed red-sardcoin">
-        <h6 *ngIf="!hide || userType != 2" class="font-weight-bold text-uppercase fas fa-chevron-circle-right" (click)="sendHide(false)">Menu</h6>
+        <h6 *ngIf="!hide || userType != 2" class="font-weight-bold text-uppercase" style="font-family: 'Calibri Light'; font-size: 18px" (click)="sendHide(false)">
+          <i class="fas fa-chevron-circle-right"></i>
+          Menu
+        </h6>
         <div *ngIf="hide && userType == 2" class="text-center d-inline-block">
           <span class="fas fa-chevron-circle-right" style="margin-left: -6px; font-size: 1.8rem;" (click)="sendHide(false)"></span>
         </div>
@@ -43,6 +46,7 @@
       <div *ngIf="this.userType == '2' || this.userType == '0'">
 
         <!--<a [routerLink]="['/showcase']" (click)="resetShowcase()" class="list-group-item list-group-item-action gray-sardcoin">-->
+          <!--<div class="text-center d-inline-block" [ngStyle]="{'width': hide && userType == '2' ? '10px ' : '40px '}" >-->
           <!--<div class="text-center d-inline-block" [ngStyle]="{'width': hide && userType == '2' ? '10px ' : '40px '}" >-->
             <!--<span class="fas fa-store icon-dimension" [ngStyle]="{'margin-left': hide && userType == '2' ? '-3px ' : '0 '}"></span>-->
           <!--</div>-->
