--- a/src/app/core/sidebar/sidebar.component.html
+++ b/src/app/core/sidebar/sidebar.component.html
@@ -24,7 +24,7 @@
         </a>
         <a [routerLink]="['/reserved-area/producer/create']" class="list-group-item list-group-item-action gray-sardcoin">
           <div class="text-center d-inline-block producer-icon"><span class="fas fa-plus-circle icon-dimension"></span></div>
-          <span class="menu-collapsed">Aggiungi coupon</span>
+          <span class="menu-collapsed">Crea coupon</span>
         </a>
         <a [routerLink]="['/reserved-area/producer/offline']" class="list-group-item list-group-item-action gray-sardcoin">
           <div class="text-center d-inline-block producer-icon"><span class="fas fa-print icon-dimension"></span></div>
@@ -32,7 +32,7 @@
         </a>
         <a [routerLink]="['/reserved-area/producer/report']" class="list-group-item list-group-item-action gray-sardcoin">
           <div class="text-center d-inline-block producer-icon"><span class="fas fa-chart-bar icon-dimension"></span></div>
-          <span class="menu-collapsed">Reports</span>
+          <span class="menu-collapsed">Report</span>
         </a>
       </div>
 
