--- a/src/app/features/reserved-area/producer/coupon-create/coupon-create.component.scss
+++ b/src/app/features/reserved-area/producer/coupon-create/coupon-create.component.scss
@@ -8,6 +8,14 @@ p{
   padding-top: 30px !important;
 }
 
+span.span-style {
+  cursor: pointer;
+  background-color: #e7e7e7;
+  color: black;
+  padding: 9px;
+  border-radius: 15%;
+}
+
 div.wrapperDate {
   text-align: center;
 }
