--- a/src/app/features/reserved-area/producer/coupon-edit/coupon-edit.component.scss
+++ b/src/app/features/reserved-area/producer/coupon-edit/coupon-edit.component.scss
@@ -8,6 +8,14 @@
   max-height: 100%;
 }
 
+span.span-style {
+  cursor: pointer;
+  background-color: #e7e7e7;
+  color: black;
+  padding: 9px;
+  border-radius: 15%;
+}
+
 label{
   color: #20a8d8 !important;
   padding-top: 10px;
