--- a/src/app/features/reserved-area/verifier/verifier.component.html
+++ b/src/app/features/reserved-area/verifier/verifier.component.html
@@ -7,8 +7,8 @@
       </div>
       <div class="card">
         <div class="card-body px-5 pt-4">
-          <p class="text-justify" style="font-size: 16px;">In questa pagina puoi riscattere i coupon dei tuoi clienti
-            aggiungendo il suo codice o scansionando il suo codice QR.</p>
+          <p class="text-justify" style="font-size: 16px;">In questa pagina puoi riscattare i coupon
+            aggiungendo il token o scansionando il codice QR.</p>
           <form [formGroup]="tokenForm" (ngSubmit)="openModal(verifier, f.token.value)">
             <div class="form-group row">
               <div class="col-md-4  col-sm-12">
