--- a/src/app/features/reserved-area/producer/coupon-edit/coupon-edit.component.html
+++ b/src/app/features/reserved-area/producer/coupon-edit/coupon-edit.component.html
@@ -37,10 +37,16 @@
                   <img src="{{imageSelected? imageSelected: imageURL}}">
                 </div>
                   <div >
-                    <label  class="col-lg-3 col-sm-6 col-form-label" style="padding-right: 8px">Cambia immagine </label>
 
-                    <input (change)="preview(file.files)" #file class="col-lg-9 col-sm-6 col-form-label" accept="image/*" type="file"  formControlName="image" ng2FileSelect [uploader]="uploader"
+
+                    <input (change)="preview(file.files)" #file class="col-lg-9 col-sm-6 col-form-label" accept="image/*" style="display:none;" type="file"  id="files" formControlName="image" ng2FileSelect [uploader]="uploader"
                            [ngClass]="{ 'is-invalid': submitted && f.image.errors }"/>
+
+                    <label for="files" style="margin-top: 10px">
+                      <span class="span-style">
+                      Sfoglia
+                      </span>
+                    </label>
 
                   </div>
 
@@ -158,7 +164,7 @@
             </div> <!-- Valid Until -->
 
             <div class="form-group row">
-              <label class="col-sm-2 col-form-label">Vincoli:</label>
+              <label class="col-sm-2 col-form-label">Luogo:</label>
               <div class="col-sm-8">
                 <input [readonly]="markedConstraints" type="text" formControlName="constraints" class="form-control"
                        [ngClass]="{ 'is-invalid': submitted && f.constraints.errors }"/>
@@ -170,7 +176,7 @@
                 <div class="custom-control custom-checkbox">
                   <input type="checkbox" class="custom-control-input" id="constraintsCheck"
                          [checked]="markedConstraints" (change)="toggleCheckbox($event)" data-md-icheck>
-                  <label class="custom-control-label" for="constraintsCheck">Nessuna</label>
+                  <label class="custom-control-label" for="constraintsCheck">Ovunque</label>
                 </div>
               </div>
             </div> <!-- Constraints -->
