--- a/src/app/features/reserved-area/producer/coupon-list/coupon-list.component.html
+++ b/src/app/features/reserved-area/producer/coupon-list/coupon-list.component.html
@@ -7,8 +7,8 @@
     <ng-container matColumnDef="title">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Titolo</th>
       <td mat-cell *matCellDef="let coupon">
-        <span *ngIf="coupon.description.length > 40" class="card-text truncate " style="font-size: 17px;">{{coupon.title.substring(0,40)}}...</span> <br/>
-        <span *ngIf="coupon.description.length <= 40" class="card-text truncate " style="font-size: 17px;">{{coupon.title}}</span> <br/>
+        <span *ngIf="coupon.description.length > 40" class="card-text truncate" style="font-size: 17px;">{{coupon.title.substring(0,40)}}...</span> <br/>
+        <span *ngIf="coupon.description.length <= 40" class="card-text truncate" style="font-size: 17px;">{{coupon.title}}</span> <br/>
 
         <i *ngIf="coupon.description.length > 100" style="color: #999; font-size: 15px;">{{coupon.description.substring(0,100)}}...</i>
         <i *ngIf="coupon.description.length <= 100" style="color: #999; font-size: 15px;">{{coupon.description}}</i>
@@ -38,14 +38,14 @@
 
     <!-- Quantity Column -->
     <ng-container matColumnDef="quantity">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header class="d-sm-table-cell d-none">Unità</th>
-      <td mat-cell *matCellDef="let coupon" class="p-1" class="d-sm-table-cell d-none">{{coupon.quantity}}</td>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header class="d-sm-table-cell d-none" style="width: 100px">Unità vendute</th>
+      <td mat-cell *matCellDef="let coupon" class="p-1 d-sm-table-cell d-none" style="text-align: center;">{{coupon.quantity}}</td>
     </ng-container>
 
     <!-- Sold Column -->
     <ng-container matColumnDef="buyed">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header class="d-lg-table-cell d-none">Venduto</th>
-      <td mat-cell *matCellDef="let coupon" class="d-lg-table-cell d-none">{{coupon.buyed}}</td>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header class="d-lg-table-cell d-none" style="width: 100px">Unità rimaste</th>
+      <td mat-cell *matCellDef="let coupon" class="d-lg-table-cell d-none" style="text-align: center;">{{coupon.quantity - coupon.buyed}}</td>
     </ng-container>
 
     <!-- Buttons Column-->
