--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -41,7 +41,7 @@
                 <strong class="text-capitalize ">Impostazioni</strong>
               </div>
               <a class="dropdown-item"
-                 [routerLink]="['/reserved-area/' + userStringType +'/personal-info']">
+                 [routerLink]="[infoUserLink +'/personal-info']">
                 <i class="fa fa-user"></i> Il mio profilo</a>
               <a class="dropdown-item menu-collapsed text-secondary ">
                 <i class="fa fa-wrench"></i> Impostazioni</a>
