--- a/src/app/features/reserved-area/consumer/cart/cart.component.html
+++ b/src/app/features/reserved-area/consumer/cart/cart.component.html
@@ -5,11 +5,11 @@
         <table class="table table-striped table-borderless">
           <thead>
             <tr>
-              <th scope="col">Titolo</th>
-              <th scope="col" style="width: 10%;">Immagine</th>
-              <th scope="col" style="width: 10%;">Prezzo</th>
-              <th scope="col">Quantità</th>
-              <th scope="col">Scadenza</th>
+              <th scope="col">TITOLO</th>
+              <th scope="col" style="width: 10%;">IMMAGINE</th>
+              <th scope="col" style="width: 10%;">PREZZO</th>
+              <th scope="col">QUANTITÀ</th>
+              <th scope="col">SCADENZA</th>
               <th scope="col"></th>
               <th scope="col"></th>
               <th scope="col"></th>
