--- a/src/app/features/reserved-area/consumer/checkout/checkout.component.html
+++ b/src/app/features/reserved-area/consumer/checkout/checkout.component.html
@@ -15,11 +15,11 @@
                 <table class="table table-striped table-borderless">
                   <thead>
                   <tr>
-                    <th style="width: 40%">Titolo</th>
-                    <th style="width: 10%">Immagine</th>
-                    <th style="width: 10%">Prezzo</th>
-                    <th style="width: 10%">Quantità</th>
-                    <th style="width: 10%">Scadenza</th>
+                    <th style="width: 40%">TITOLO</th>
+                    <th style="width: 10%">IMMAGINE</th>
+                    <th style="width: 10%">PREZZO</th>
+                    <th style="width: 10%">QUANTITÀ</th>
+                    <th style="width: 10%">SCADENZA</th>
                   </tr>
                   </thead>
 
@@ -71,11 +71,11 @@
                 <table class="table table-striped table-borderless">
                   <thead>
                   <tr>
-                    <th style="width: 40%">Titolo</th>
-                    <th style="width: 10%">Immagine</th>
-                    <th style="width: 10%">Prezzo</th>
-                    <th style="width: 10%">Quantità</th>
-                    <th style="width: 10%">Scadenza</th>
+                    <th style="width: 40%">TITOLO</th>
+                    <th style="width: 10%">IMMAGINE</th>
+                    <th style="width: 10%">PREZZO</th>
+                    <th style="width: 10%">QUANTITÀ</th>
+                    <th style="width: 10%">SCADENZA</th>
                   </tr>
                   </thead>
 
@@ -129,11 +129,11 @@
                 <table class="table table-striped table-borderless">
                   <thead>
                   <tr>
-                    <th style="width: 40%">Titolo</th>
-                    <th style="width: 10%">Immagine</th>
-                    <th style="width: 10%">Prezzo</th>
-                    <th style="width: 10%">Quantità</th>
-                    <th style="width: 10%">Scadenza</th>
+                    <th style="width: 40%">TITOLO</th>
+                    <th style="width: 10%">IMMAGINE</th>
+                    <th style="width: 10%">PREZZO</th>
+                    <th style="width: 10%">QUANTITÀ</th>
+                    <th style="width: 10%">SCADENZA</th>
                   </tr>
                   </thead>
 
