--- a/src/app/features/reserved-area/consumer/coupon-bought/coupon-bought-detail/coupon-bought-detail.component.html
+++ b/src/app/features/reserved-area/consumer/coupon-bought/coupon-bought-detail/coupon-bought-detail.component.html
@@ -13,7 +13,7 @@
 
         <div class="coupon-price">{{formatPrice(couponPass.price)}}</div>
 
-        <p class="card-text mt-3">{{couponPass.description}}</p>
+        <p class="card-text mt-3" [innerHTML]="byPassHTML(couponPass.description)"></p>
 
         <p class="card-text">
           <i class="fas fa-fw  fa-clock text-secondary"></i> Validità: {{formatUntil(couponPass.valid_until)}}
