--- a/src/app/features/reserved-area/producer/coupon-list/coupon-list.component.html
+++ b/src/app/features/reserved-area/producer/coupon-list/coupon-list.component.html
@@ -7,11 +7,11 @@
     <ng-container matColumnDef="title">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Titolo</th>
       <td mat-cell *matCellDef="let coupon">
-        <span *ngIf="coupon.description.length > 40" class="card-text truncate" style="font-size: 17px;">{{coupon.title.substring(0,40)}}...</span> <br/>
-        <span *ngIf="coupon.description.length <= 40" class="card-text truncate" style="font-size: 17px;">{{coupon.title}}</span> <br/>
+        <span *ngIf="coupon.title.length > 40" class="card-text truncate" style="font-size: 17px;" [innerHTML]="byPassHTML(coupon.title)">{{coupon.title.substring(0,40)}}...</span> <br/>
+        <span *ngIf="coupon.title.length <= 40" class="card-text truncate" style="font-size: 17px;" [innerHTML]="byPassHTML(coupon.title)">{{coupon.title}}</span> <br/>
 
-        <i *ngIf="coupon.description.length > 100" style="color: #999; font-size: 15px;">{{coupon.description.substring(0,100)}}...</i>
-        <i *ngIf="coupon.description.length <= 100" style="color: #999; font-size: 15px;">{{coupon.description}}</i>
+        <i *ngIf="coupon.description.length > 100" style="color: #999; font-size: 15px;" [innerHTML]="byPassHTML(coupon.description.substring(0,100)+ '...')"></i>
+        <i *ngIf="coupon.description.length <= 100" style="color: #999; font-size: 15px;" [innerHTML]="byPassHTML(coupon.description)"></i>
 
       </td>
     </ng-container>
@@ -88,7 +88,7 @@
       <h5 class="card-text truncate ">{{coupon.title}}</h5>
     </div>
     <div class="col-12 mb-1 text-justify">
-      <p class="card-text truncate ">{{coupon.description}}</p>
+      <p class="card-text truncate " [innerHTML]="byPassHTML(coupon.description)">{{coupon.description}}</p>
     </div>
     <div class="card-footer w-100">
       <div class="float-left">
