--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -13,3 +13,6 @@
 
 // Font Mr. Robot
 @import url('https://fonts.googleapis.com/css?family=Roboto:100,400');
+// for description custom
+@import '~quill/dist/quill.bubble.css';
+@import '~quill/dist/quill.snow.css';
