--- a/src/app/features/reserved-area/consumer/coupon-details/coupon-details.component.html
+++ b/src/app/features/reserved-area/consumer/coupon-details/coupon-details.component.html
@@ -15,7 +15,7 @@
           <i class="fas fa-cart-arrow-down"></i>
         </div>
 
-        <p class="card-text mt-3">{{couponPass.description}}</p>
+        <p class="card-text mt-3" [innerHTML]="byPassHTML(couponPass.description)"></p>
         <p *ngIf="couponPass.max_quantity >= 10" class="card-text"><i style="color:#0c8a33">Alta disponibilità</i></p>
 
         <p *ngIf="couponPass.max_quantity > 4 && couponPass.max_quantity < 10" class="card-text"><i style="color:#ffd51c">Bassa
