--- a/src/app/features/reserved-area/producer/coupon-edit/coupon-edit.component.html
+++ b/src/app/features/reserved-area/producer/coupon-edit/coupon-edit.component.html
@@ -22,11 +22,15 @@
             <div class="form-group row">
               <label class="col-sm-2 col-form-label">Descrizione:</label>
               <div class="col-sm-10">
-                <textarea rows="7" type="text" formControlName="description" class="form-control"
-                          [ngClass]="{ 'is-invalid': submitted && f.description.errors }"></textarea>
-                <div *ngIf="submitted && f.description.errors" class="invalid-feedback">
-                  <div *ngIf="f.description.errors">Descrizione obbligatoria, deve essere tra 5 e 5000 caratteri</div>
+                <div [ngClass]="{ 'is-invalid': submitted && f.description.errors }">
+                  <quill-editor [modules]= "this.toolbarOptions"  format="html" formControlName="description" [styles]="{height: '200px'}" (onFocus)="focus($event)" (onEditorChanged)="changedEditor($event)" (onBlur)="blur($event)" (onEditorCreated)="created($event)"></quill-editor>
                 </div>
+
+<!--                <textarea rows="7" type="text" formControlName="description" class="form-control"-->
+<!--                          [ngClass]="{ 'is-invalid': submitted && f.description.errors }"></textarea>-->
+<!--                <div *ngIf="submitted && f.description.errors" class="invalid-feedback">-->
+<!--                  <div *ngIf="f.description.errors">Descrizione obbligatoria, deve essere tra 1 e 55000 caratteri. Le immagini contengono molti caratteri.</div>-->
+<!--                </div>-->
               </div>
             </div> <!-- Description -->
 
@@ -221,6 +225,10 @@
           <!--</div>-->
           <div class="alert alert-danger col-md-12" *ngIf="submitted && f.quantity.errors?.MatchQuantity">
             Quantità non corretta.
+          </div>
+          <div *ngIf="submitted && f.description.status === 'INVALID'" class="alert alert-danger col-md-12">
+            <div >Descrizione obbligatoria, deve essere tra 1 e 55000 caratteri. Le immagini contengono molti caratteri.
+            </div>
           </div>
           <div class="form group">
             <p>
