[style] delete button trash in smart device

--- a/src/app/features/reserved-area/consumer/cart/cart.component.html
+++ b/src/app/features/reserved-area/consumer/cart/cart.component.html
@@ -229,9 +229,9 @@
             <button class="btn btn-lg btn-primary float-right mr-sm-0" (click)="retry()">
               <i class="fas fa-shopping-basket mr-2"></i> Shopping
             </button>
-            <button class="btn btn-lg btn-warning text-white float-left mr-sm-0 mr-1"
-                    (click)="openModal(emptyCartTemplate)">
-              <i class="fas fa-trash"></i></button>
+<!--            <button class="btn btn-lg btn-warning text-white float-left mr-sm-0 mr-1"-->
+<!--                    (click)="openModal(emptyCartTemplate)">-->
+<!--              <i class="fas fa-trash"></i></button>-->
           </div>
         </div>
       </div> <!-- SM VIEW -->
