--- a/src/app/features/reserved-area/producer/coupon-list/coupon-list.component.html
+++ b/src/app/features/reserved-area/producer/coupon-list/coupon-list.component.html
@@ -7,8 +7,8 @@
     <ng-container matColumnDef="title">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Titolo</th>
       <td mat-cell *matCellDef="let coupon">
-        <span *ngIf="coupon.title.length > 40" class="card-text truncate" style="font-size: 17px;" [innerHTML]="byPassHTML(coupon.title)">{{coupon.title.substring(0,40)}}...</span> <br/>
-        <span *ngIf="coupon.title.length <= 40" class="card-text truncate" style="font-size: 17px;" [innerHTML]="byPassHTML(coupon.title)">{{coupon.title}}</span> <br/>
+        <span *ngIf="coupon.title.length > 100" class="card-text truncate" style="font-size: 17px;" [innerHTML]="byPassHTML(coupon.title)">{{coupon.title.substring(0,100)}}</span> <br/>
+        <span *ngIf="coupon.title.length <= 100" class="card-text truncate" style="font-size: 17px;" [innerHTML]="byPassHTML(coupon.title)">{{coupon.title}}</span> <br/>
 
         <i *ngIf="coupon.description.length > 100" style="color: #999; font-size: 15px;" [innerHTML]="byPassHTML(coupon.description.substring(0,100)+ '...')"></i>
         <i *ngIf="coupon.description.length <= 100" style="color: #999; font-size: 15px;" [innerHTML]="byPassHTML(coupon.description)"></i>
