--- a/src/app/features/reserved-area/broker/package-list/package-list.component.html
+++ b/src/app/features/reserved-area/broker/package-list/package-list.component.html
@@ -9,8 +9,8 @@
       <td mat-cell *matCellDef="let coupon">
         <span *ngIf="coupon.description.length > 40" style="font-size: 17px;">{{coupon.title.substring(0,40)}}...</span>
         <span *ngIf="coupon.description.length <= 40" class="card-text truncate " style="font-size: 17px;">{{coupon.title}}</span> <br/>
-        <i *ngIf="coupon.description.length > 100" style="color: #999; font-size: 15px;">{{coupon.description.substring(0,100)}}...</i>
-        <i *ngIf="coupon.description.length <= 100" style="color: #999; font-size: 15px;">{{coupon.description}}</i>
+        <i *ngIf="coupon.description.length > 100" style="color: #999; font-size: 15px;" [innerHTML]="byPassHTML(coupon.description.substring(0,100)+ '...')"></i>
+        <i *ngIf="coupon.description.length <= 100" style="color: #999; font-size: 15px;" [innerHTML]="byPassHTML(coupon.description)"></i>
 
       </td>
     </ng-container>
