--- a/src/app/features/reserved-area/broker/package-list/package-list.component.html
+++ b/src/app/features/reserved-area/broker/package-list/package-list.component.html
@@ -9,13 +9,8 @@
       <td mat-cell *matCellDef="let coupon">
         <span *ngIf="coupon.description.length > 40" style="font-size: 17px;">{{coupon.title.substring(0,40)}}...</span>
         <span *ngIf="coupon.description.length <= 40" class="card-text truncate " style="font-size: 17px;">{{coupon.title}}</span> <br/>
-<<<<<<< Updated upstream
         <i *ngIf="coupon.description.length > 100" style="color: #999; font-size: 15px;" [innerHTML]="byPassHTML(coupon.description.substring(0,100)+ '...')"></i>
         <i *ngIf="coupon.description.length <= 100" style="color: #999; font-size: 15px;" [innerHTML]="byPassHTML(coupon.description)"></i>
-=======
-        <i *ngIf="coupon.description.length > 100" style="color: #999; font-size: 15px;"  [innerHTML]="byPassHTML(coupon.description.substring(0,100)+ '...')"></i>
-        <i  [innerHTML]="byPassHTML(coupon.description.substring(0,100)+ '...')" *ngIf="coupon.description.length <= 100" style="color: #999; font-size: 15px;"></i>
->>>>>>> Stashed changes
 
       </td>
     </ng-container>
@@ -57,7 +52,6 @@
       <th mat-header-cell *matHeaderCellDef></th>
       <td mat-cell *matCellDef="let coupon" class="p-1">
         <div class="btn-group" dropdown>
-          {{getTimestamp(coupon.visible_from) + ' and ' + timestamp}}
           <button id="action-button" dropdownToggle type="button" class="btn btn-primary dropdown-toggle"
                   aria-controls="action-button">
             Azioni <span class="caret"></span>
@@ -93,7 +87,7 @@
         <h5 class="card-text truncate ">{{coupon.title}}</h5>
       </div>
       <div class="col-12 mb-1 text-justify">
-        <p class="card-text truncate ">{{coupon.description}}</p>
+        <p class="card-text truncate " [innerHTML]="byPassHTML(coupon.description)"></p>
       </div>
       <div class="card-footer w-100">
         <div class="float-left">
